--- a/client/src/app/components/directives/pagination/pagination.component.html
+++ b/client/src/app/components/directives/pagination/pagination.component.html
@@ -1,6 +1,11 @@
 <div class="flex-continer pagination-container" fxLayout="row" fxLayoutAlign="end center">
 	<div class="flex-item" fxFlex></div>
-	<div *ngIf="showPageSelector" class="flex-item" fxFlex="31px" fxHide fxShow.gt-sm="true">
+	<div *ngIf="showPageSelector" 
+		class="flex-item" 
+		fxFlex="31px" 
+		fxHide 
+		fxShow.gt-sm
+		[fxShow.gt-xs]="!isSideinfoOpen() || !isNavDrawerOpen()">
 		Page:
 	</div>
 	<md-select *ngIf="showPageSelector"
@@ -9,7 +14,8 @@
 		class="pagination-numeric-selector flex-item" 
 		fxFlex="64px"
 		fxHide
-		fxShow.gt-sm="true">
+		fxShow.gt-sm
+		[fxShow.gt-xs]="!isSideinfoOpen() || !isNavDrawerOpen()">
 		<md-option *ngFor="let i of availablePagesSelection" [value]="i">{{i}}</md-option>
 	</md-select>
 	<div class="flex-item" fxFlex="83px" style="margin-left:32px;">
@@ -29,6 +35,9 @@
 		(click)="firstPage()" 
 		class="pagination-nav-button flex-item" 
 		fxFlex="24px"
+		fxHide
+		fxShow.gt-sm
+		[fxShow.gt-xs]="!isSideinfoOpen() || !isNavDrawerOpen()"
 		mdTooltip="First" 
 		mdTooltipPosition="above">
 		<md-icon class="pagination-nav-button-icon">first_page</md-icon>
@@ -55,6 +64,9 @@
 		class="pagination-nav-button flex-item" 
 		[ngStyle]="{'margin-right': extraPadding + 14 + 'px'}" 
 		fxFlex="24px"
+		fxHide
+		fxShow.gt-sm
+		[fxShow.gt-xs]="!isSideinfoOpen() || !isNavDrawerOpen()"
 		mdTooltip="Last" 
 		mdTooltipPosition="above">
 		<md-icon class="pagination-nav-button-icon">last_page</md-icon>
