--- a/client/src/app/components/instrument/instrument-list/instrument-list.component.html
+++ b/client/src/app/components/instrument/instrument-list/instrument-list.component.html
@@ -41,10 +41,11 @@
 			</button>
 		</div>
 		<div class="unselectable data-table-header-row flex-container" fxLayout="row">
-			<div class="data-table-first-column truncate flex-item" fxFlex (click)="sortBy('serialNumber')">
+			<div class="data-table-first-column truncate flex-item" (click)="sortBy('serialNumber')" fxFlex>
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'serialNumber'}">
-					Serial Number
+					<span fxHide fxShow.gt-md [fxShow.gt-sm]="!showSideInfo">Serial Number</span>
+					<span fxShow fxHide.gt-md [fxHide.gt-sm]="!showSideInfo">S/N</span>
 				</span>
 				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
 					'data-table-header-sort-arrow-reverse': sort.reversed,
@@ -52,10 +53,10 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('instrumentType')">
+			<div class="data-table-column truncate flex-item" (click)="sortBy('instrumentType')" fxFlex>
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'instrumentType'}">
-					Equipment Type
+					Type
 				</span>
 				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
 					'data-table-header-sort-arrow-reverse': sort.reversed,
@@ -63,7 +64,7 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('instrumentStatus')">
+			<div class="data-table-column truncate flex-item" (click)="sortBy('instrumentStatus')" fxFlex>
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'instrumentStatus'}">
 					Status
@@ -74,7 +75,13 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('lastServiceDate')" fxHide fxShow.gt-md>
+			<div class="data-table-column truncate flex-item" 
+				(click)="sortBy('lastServiceDate')" 
+				fxFlex 
+				fxHide 
+				fxShow.gt-lg 
+				[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
+				[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'lastServiceDate'}">
 					Last Service
@@ -85,7 +92,13 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('serviceDueDate')" fxHide fxShow.gt-md>
+			<div class="data-table-column truncate flex-item" 
+				(click)="sortBy('serviceDueDate')" 
+				fxFlex 
+				fxHide 
+				fxShow.gt-lg 
+				[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
+				[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'serviceDueDate'}">
 					Next Service
@@ -96,7 +109,13 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('purchaseDate')" fxHide fxShow.gt-md>
+			<div class="data-table-column truncate flex-item" 
+				(click)="sortBy('purchaseDate')" 
+				fxFlex 
+				fxHide 
+				fxShow.gt-lg 
+				[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
+				[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'purchaseDate'}">
 					Purchased
@@ -107,10 +126,11 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('site')">
+			<div class="data-table-column truncate flex-item" (click)="sortBy('site')" fxFlex>
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'site'}">
-					Assign. Site
+					<span fxHide fxShow.gt-md [fxShow.gt-sm]="!showSideInfo">Assigned Site</span>
+					<span fxShow fxHide.gt-md [fxHide.gt-sm]="!showSideInfo">Site</span>
 				</span>
 				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
 					'data-table-header-sort-arrow-reverse': sort.reversed,
@@ -118,7 +138,7 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('inventoryNumber')">
+			<div class="data-table-column truncate flex-item" (click)="sortBy('inventoryNumber')" fxFlex>
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'inventoryNumber'}">
 					Inventory No.
@@ -152,13 +172,28 @@
 					<div class="data-table-column truncate flex-item" fxFlex>
 						{{instrument.instrumentStatus.name}}
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex fxHide fxShow.gt-md>
+					<div class="data-table-column truncate flex-item" 
+						fxFlex 
+						fxHide 
+						fxShow.gt-lg 
+						[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
+						[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
 						{{DateTimeUtils.getDate(instrument.lastServiceDate)}}
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex fxHide fxShow.gt-md>
+					<div class="data-table-column truncate flex-item" 
+						fxFlex 
+						fxHide 
+						fxShow.gt-lg 
+						[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
+						[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
 						{{DateTimeUtils.getDate(instrument.serviceDueDate)}}
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex fxHide fxShow.gt-md>
+					<div class="data-table-column truncate flex-item" 
+						fxFlex 
+						fxHide 
+						fxShow.gt-lg 
+						[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
+						[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
 						{{DateTimeUtils.getDate(instrument.purchaseDate)}}
 					</div>
 					<div class="data-table-column truncate flex-item" fxFlex>
