--- a/client/src/app/components/user/user-group-list-sideinfo/user-group-list-sideinfo.component.html
+++ b/client/src/app/components/user/user-group-list-sideinfo/user-group-list-sideinfo.component.html
@@ -14,22 +14,41 @@
 				<div class="sideinfo-section-data-key flex-item" fxFlex="96px">
 					Date Created
 				</div>
-				<div *ngIf="userGroup.createdDate" class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
-					{{DateTimeUtils.getDate(userGroup.createdDate)}} {{DateTimeUtils.getTime(userGroup.createdDate)}}
+				<div class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
+					{{DateTimeUtils.getDetailedDateTime(userGroup?.createdDate)}}
+				</div>
+			</div>
+			<div class="sideinfo-section-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
+				<div class="sideinfo-section-data-key flex-item" fxFlex="96px">
+					Created By
+				</div>
+				<div class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
+					{{StringUtils.formatUserName(userGroup?.createdBy)}}
 				</div>
 			</div>
 			<div class="sideinfo-section-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
 				<div class="sideinfo-section-data-key flex-item" fxFlex="96px">
 					Last Modified
 				</div>
-				<div *ngIf="userGroup.modifiedDate" class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
-					{{DateTimeUtils.getDate(userGroup.modifiedDate)}} {{DateTimeUtils.getTime(userGroup.modifiedDate)}}
+				<div class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
+					{{DateTimeUtils.getDetailedDateTime(userGroup?.modifiedDate)}}
+				</div>
+			</div>
+			<div class="sideinfo-section-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
+				<div class="sideinfo-section-data-key flex-item" fxFlex="96px">
+					Modified By
+				</div>
+				<div class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
+					{{StringUtils.formatUserName(userGroup?.modifiedBy)}}
 				</div>
 			</div>
 		</div>
 		<div class="sideinfo-section">
 			<div class="sideinfo-section-header">
 				Description
+			</div>
+			<div *ngIf="!userGroup.description" class="sideinfo-section-data-paragraph" style="width:256px;">
+				<i>No description provided</i>
 			</div>
 			<div class="sideinfo-section-data-paragraph" style="width:256px;">
 				{{userGroup.description}}
