--- a/client/src/app/components/directives/card-selector-menu/card-selector-menu.component.html
+++ b/client/src/app/components/directives/card-selector-menu/card-selector-menu.component.html
@@ -5,7 +5,8 @@
         <div *ngFor="let card of cards">
             <div *ngIf="card.visible" class="selector-cards-container flex-item" fxFlex>
                 <div class="selector-card flex-container" 
-					fxLayout="row" fxLayoutAlign="center" 
+					fxLayout="row" 
+                    fxLayoutAlign="center" 
 					[ngClass]="{'selector-card-disabled' : card.disabled}"
 					(click)="click(card)">
                     <img *ngIf="card.img" class="selector-card-img flex-item" [src]="card.img">
