--- a/client/src/app/components/mobile/mobile-sync/mobile-sync.component.scss
+++ b/client/src/app/components/mobile/mobile-sync/mobile-sync.component.scss
@@ -4,6 +4,8 @@
 }
 
 .selector-card {
+	position: relative;
+	z-index: 2;
 	background: #FFF;
 	border-radius: 2px;
 	margin: 8px 0;
@@ -19,24 +21,22 @@
 	box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12); // mat-elevation-z8
 }
 
-.selector-card-disabled {
-	cursor: default;
-	transform: translate(0, 0) !important;
-	box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12) !important; // mat-elevation-z2
-	.selector-card-title {
-		color: rgba(0, 0, 0, 0.54);
-	}
-	.mat-icon {
-		color: rgba(0,0,0,0.54) !important;
-	}
-	.selector-card-img {
-		filter: grayscale(100%) contrast(69%) brightness(200%) ;
-	}
+.selector-card-expansion-card {
+	pointer-events: none;
+	border-radius: 0 0 2px 2px;
+	margin: 0 1px 8px 1px;
+	z-index: 1;
+	user-select: none;
+	transition: all 0.2s ease-in-out;
+	position: relative;
+	top: -112px;
+	height: 0;
 }
 
-.selector-card-img {
-	border-radius: 2px 0 0 2px;
-	height: 108px;
+.selector-card-expansion-card-expanded {
+	pointer-events: all;
+	top: -8px;
+	height: 108px
 }
 
 .selector-card-title-container {
@@ -63,4 +63,9 @@
 	button {
 		margin-left: 8px;
 	}
+}
+
+.upload-component-hidden {
+	visibility: hidden;
+	height: 0;
 }
